# node_project

./: .env  .gitignore  CLEAN_PROJECT_REPORT.md  DETAILED_SYSTEM_CHECK.md  DUAL_BRAIN_REVOLUTION.md  Dockerfile  GITHUB_SELF_IMPROVEMENT_GUIDE.md  LAUNCH_INSTRUCTIONS.md  LAUNCH_REPORT.md  LICENSE  PROJECT_DEVELOPMENT_PLAN.md  QUICK_START.md  README.md  README_SWARMMIND.md  SWARMMIND_USER_GUIDE.md  UNIFIED_LAUNCH_INSTRUCTIONS.md  bootstrap.sh  build.py  demo_report.md  desktop_app.py  docker-compose.yml  evolution_visualizer.py  example.py  github_integration.py  pyproject.toml  requirements.txt  start_autonomous_system.py  start_node.bat  start_unified_system.py  start_with_visualization.py  stop_node.bat  swarmmind_real_evolution_test.md  test_github_simple.py  unified_interface.py  web_interface.py  working_swarmmind_interface.py
.github/workflows/: ci.yml
improvements/: evolution_visualizer.py_improvement.md  github_integration.py_improvement.md
infra/: Dockerfile  docker-compose.yml
scripts/: full_system_test.py  run_dual_brain_evolution.py  run_evolution.py  run_neuron.py  simple_evolution_demo.py
swarm_mind/: __init__.py  core.py  github_self_improvement.py  interface.py  logger.py  neuron.py  p2p.py  self_modification.py  subnet.py  task.py  web_interface.py
swarm_mind/evolution/: __init__.py  code_generator.py  dual_brain_architect.py  evolutionary_neuron.py  self_improver.py
swarm_mind/miners/: base_miner.py
swarm_mind/validators/: base_validator.py  llm_validator.py
tests/: __init__.py  test_node.py
torrentnode/: __init__.py  __main__.py  cli.py  node.py  rewards.py  task_executor.py  utils.py
